tests/js_error/source_locations/expression/yield_star/throw_result_get_named_property_value_throws.exp
Error: 
   ┌ tests/js_error/source_locations/expression/yield_star/throw_result_get_named_property_value_throws.js:10:19
   |
10 |             throw new Error();
   |                   ^
Stack trace:
  at get value (tests/js_error/source_locations/expression/yield_star/throw_result_get_named_property_value_throws.js:10:19)
  at generator (tests/js_error/source_locations/expression/yield_star/throw_result_get_named_property_value_throws.js:20:3)
  at throw (<native>)
  at <global> (tests/js_error/source_locations/expression/yield_star/throw_result_get_named_property_value_throws.js:25:1)