tests/js_error/source_locations/expression/yield_star/throw_result_get_named_property_value_throws.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        return { value: 1, done: false };
      },
      throw() {
        return {
          get value() {
            throw new Error();
          },
          done: true,
        }
      }
    };
  }
}

function *generator() {
  yield* iterable;
}

let iter = generator();
iter.next();
iter.throw();